Changed from shallot-0.0.1 to shallot-0.0.2:

* Corrected some things in the README.
* Removed redundant PEM generation.
* Improved SHA-1 hashing performance.
* The previous two performance enhancements give us a ~4.6x speed
    boost.  That's right, ~4.6 TIMES as fast.
* Added a "sanity" limit to e, so it doesn't get insanely high during
    long hashing sessions.  It's adjustable, too.
* Allowed the number of threads to be specified during startup.
* Added a "monitor" mode (try it out! -m)
* Added an option to automatically daemonize
* Added file output option
* Added a verbose flag (for debugging)
* Now configures for BSD-style build on OS X.
* Allows for building on unidentified systems, in a slightly crippled
    form (defaults to 1 thread unless specified).
* OpenBSD is now officially supported and tested (it lacks support
    for sysctlbyname(3), wtf?).
* Removed a (small) buffer overflow.


Changed from onionhash-0.0.2 to shallot-0.0.1:

* Fixed a 1KB memory leak.
* Removed irrelevant code.
* Brute force loop no longer mallocs/frees,  giving a ~1% increase in
    hashing speed.
* Now completely multithreaded, allowing systems with several CPUs to
    take full advantage of all of them to hash!
* Now follows PKCS#1 v2.1 for satisfactory public keys (previously on
    a version prior to v2.0, i.e. v1.5).
* BSD and Linux ports (required due to autodetecting core count).
