@@ -1,7 +1,7 @@
 #ifndef THREAD_H
 #define THREAD_H
 
-void *worker(void *unused);
+void *worker(void *params);
 void *monitor_proc(void *unused);
 
 #endif
